<resources>
    <string name="app_name">medimindRewards</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="existing_rewards">Existing Rewards</string>
    <string name="all_rewards">All Rewards</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="navbar">navbar</string>
    <string name="points">points</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_wishlist_fragment_label" />
    <string name="my_rewards_fragment_label" />
    <string name="my_wishlist2">My Wishlist</string>
    <string name="all_rewards_title">All Rewards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="all_rewards_title2">All Rewards</string>
    <string name="existing_rewards_title">Existing Rewards</string>
    <string name="home_icon_rewards">home icon</string>
    <string name="back_icon_rewards">back icon</string>
</resources>