<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllRewardsFragment"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButtonAllRewards"
            android:contentDescription="@string/home_icon_rewards"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="#E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ImageButton
            android:id="@+id/homeButtonAllRewards"
            android:contentDescription="@string/back_icon_rewards"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:backgroundTint="#E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            />

        <TextView
            android:id="@+id/AllRewardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/all_rewards_title2"
            android:textColor="#013A8F"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>