<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRewardsFragment"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/backButtonRewards"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="#E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ImageButton
            android:id="@+id/homeButtonRewards"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:backgroundTint="#E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            />

        <TextView
            android:id="@+id/rewardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/my_rewards"
            android:textColor="#013A8F"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/pointsPlaceholder"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pointsPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/points"
            app:layout_constraintTop_toBottomOf="@id/rewardsTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/wishlistButton"
            />

        <Button
            android:id="@+id/wishlistButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="100dp"
            android:text="@string/my_wishlist"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:backgroundTint="#013A8F"
            app:cornerRadius="26dp"
            app:layout_constraintTop_toBottomOf="@id/pointsPlaceholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rewardsButton"
            />

        <Button
            android:id="@+id/rewardsButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:text="@string/all_rewards"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:backgroundTint="#013A8F"
            app:cornerRadius="26dp"
            app:layout_constraintTop_toBottomOf="@id/wishlistButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/existingButton"
            />

        <Button
            android:id="@+id/existingButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:text="@string/existing_rewards"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:backgroundTint="#013A8F"
            app:cornerRadius="26dp"
            app:layout_constraintTop_toBottomOf="@id/rewardsButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>